# Chessify

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Chessify.slnx  Chessify.vcxproj  Chessify.vcxproj.filters  README.md
src/: Animation.cpp  Animation.h  Board.cpp  Board.h  Constants.h  Engine.cpp  Engine.h  Engine_unix.cpp  Engine_win.cpp  Move.cpp  Move.h  MoveHistory.cpp  MoveHistory.h  MovePanel.cpp  MovePanel.h  MoveRecord.h  Piece.cpp  Piece.h  PromotionBoard.cpp  PromotionBoard.h  Settings.cpp  Settings.h  main.cpp
